Sun May 26 15:08:10 2002 Akinori MUSHA <knu@iDaemons.org>

   * extconf.rb: Support --with-gnome-config (Ruby-GNOME patch [532458])

Tue Mar 19 09:59:53 2002 Neil Conway <neilconway@rogers.com>

	* src/rbgnome.c: Update for change in rbgtk.h: now use the
	name RUBY_GTK_OBJ_KEY.

Tue Mar 19 01:19:03 2002 Neil Conway <neilconway@rogers.com>

	* src/rbgnome.c, src/rbgnome.h: Implement get_value_from_gno_obj.

Thu Feb  7 17:49:53 2002 Neil Conway <neilconway@rogers.com>

	* src/rbgnome-file-entry.c: Code cleanup.

Tue Feb  5 19:16:14 2002 Neil Conway <neilconway@rogers.com>

	* src/rbgnome.c: Improve Gnome.is_program_in_path: I think this
	fixes a memory leak.

	* src/rbgnome-desktop-entry.c: Add 12 simple methods, improve #launch.

Mon Feb  4 00:28:39 2002 Neil Conway <neilconway@rogers.com>

	* src/rbgnome-desktop-entry.c: More work, class now finished.

	* src/rbgnome-config.c: Implement 11 methods.

Sun Feb  3 22:59:28 2002 Neil Conway <neilconway@rogers.com>

	* extconf.rb: Update for new Gnome::DesktopEntry class.

	* src/rbgnome.h: Update for new Gnome::DesktopEntry class.

	* src/rbgnome.c: Code cleanup, implement Gnome.is_program_in_path.

	* src/rbgnome-stock.c: Code cleanup, change indentation to remove
	tabs.

	* src/rbgnome-dentry-edit.c: Implement DEntryEdit.new_notebook,
	#set_dentry and #get_dentry.

	* src/rbgnome-desktop-entry.c: Add partial implementation -- not
	finished yet.

Sun Feb  3 19:29:18 2002 Neil Conway <neilconway@rogers.com>

	* src/rbgnome-pixmap.c: Code cleanup, fix compiler warnings, reformat,
	remove commented-out code.

	* src/rbgnome-appbar.c: Fix constructor: add critical set_widget().

Thu Jan 17 23:26:08 2002 Neil Conway <neilconway@rogers.com>

	* sample/test-gnome/font-picker.rb: Fix email address,
	more minor code. Still WIP.

Tue Jan  8 08:17:21 2002 Neil Conway <neilconway@rogers.com>

	* README: Update my email address.

	* src/rbgnome-icon-list.c: Implement most of this widget.
