@@ -1,4 +1,4 @@
-/* $Id: rbgtk-xmhtml.c,v 1.2 2002/05/19 15:48:28 mutoh Exp $ */
+/* $Id: rbgtk-xmhtml.c,v 1.3 2002/05/26 14:49:16 mutoh Exp $ */
 
 /* Gtk::XmHTML widget for Ruby/Gnome
  * Copyright (C) 2001 Neil Conway <neilconway@rogers.com>
@@ -22,6 +22,8 @@
 
 VALUE gXmHTML;
 
+GtkWidget *gtk_xmhtml_new _((void));
+
 static VALUE
 xmhtml_initialize(self)
     VALUE self;
@@ -36,7 +38,7 @@ static VALUE
 xmhtml_freeze(self)
     VALUE self;
 {
-    gtk_xmhtml_freeze(GTK_XMHTML(get_widget(obj)));
+    gtk_xmhtml_freeze(GTK_XMHTML(get_widget(self)));
     return self;
 }
 
@@ -44,7 +46,7 @@ static VALUE
 xmhtml_thaw(self)
     VALUE self;
 {
-    gtk_xmhtml_thaw(GTK_XMHTML(get_widget(obj)));
+    gtk_xmhtml_thaw(GTK_XMHTML(get_widget(self)));
     return self;
 }
 
@@ -52,15 +54,15 @@ static VALUE
 xmhtml_source(self, source)
     VALUE self, source;
 {
-    gtk_xmhtml_source(GTK_XMHTML(get_widget(obj)), STR2CSTR(source));
+    gtk_xmhtml_source(GTK_XMHTML(get_widget(self)), STR2CSTR(source));
     return self;
 }
 
 static VALUE
-xmhtml_source(self, direction)
+xmhtml_string_direction(self, direction)
     VALUE self, direction;
 {
-    gtk_xmhtml_string_direction(GTK_XMHTML(get_widget(obj)),
+    gtk_xmhtml_string_direction(GTK_XMHTML(get_widget(self)),
 				NUM2INT(direction));
     return self;
 }
@@ -69,7 +71,7 @@ static VALUE
 xmhtml_set_alignment(self, alignment)
     VALUE self, alignment;
 {
-    gtk_xmhtml_set_alignment(GTK_XMHTML(get_widget(obj)),
+    gtk_xmhtml_set_alignment(GTK_XMHTML(get_widget(self)),
 			     NUM2INT(alignment));
     return self;
 }
@@ -78,7 +80,7 @@ static VALUE
 xmhtml_outline(self, flag)
     VALUE self, flag;
 {
-    gtk_xmhtml_outline(GTK_XMHTML(get_widget(obj)),
+    gtk_xmhtml_outline(GTK_XMHTML(get_widget(self)),
 		       RTEST(flag));
     return self;
 }
@@ -87,7 +89,7 @@ static VALUE
 xmhtml_set_font_familty(self, family, sizes)
     VALUE self, family, sizes;
 {
-    gtk_xmhtml_set_font_familty(GTK_XMHTML(get_widget(obj)),
+    gtk_xmhtml_set_font_familty(GTK_XMHTML(get_widget(self)),
 				STR2CSTR(family),
 				STR2CSTR(sizes));
     return self;
@@ -97,7 +99,7 @@ static VALUE
 xmhtml_set_font_familty_fixed(self, family, sizes)
     VALUE self, family, sizes;
 {
-    gtk_xmhtml_set_font_familty_fixed(GTK_XMHTML(get_widget(obj)),
+    gtk_xmhtml_set_font_familty_fixed(GTK_XMHTML(get_widget(self)),
 				      STR2CSTR(family),
 				      STR2CSTR(sizes));
     return self;
@@ -107,7 +109,7 @@ static VALUE
 xmhtml_set_font_charset(self, charset)
     VALUE self, charset;
 {
-    gtk_xmhtml_set_font_charset(GTK_XMHTML(get_widget(obj)),
+    gtk_xmhtml_set_font_charset(GTK_XMHTML(get_widget(self)),
 				STR2CSTR(charset));
     return self;
 }
@@ -116,7 +118,7 @@ static VALUE
 xmhtml_set_allow_body_colors(self, enable)
     VALUE self, enable;
 {
-    gtk_xmhtml_set_allow_body_colors(GTK_XMHTML(get_widget(obj)),
+    gtk_xmhtml_set_allow_body_colors(GTK_XMHTML(get_widget(self)),
 				     RTEST(enable));
     return self;
 }
@@ -125,7 +127,7 @@ static VALUE
 xmhtml_set_hilight_on_enter(self, flag)
     VALUE self, flag;
 {
-    gtk_xmhtml_set_hilight_on_enter(GTK_XMHTML(get_widget(obj)),
+    gtk_xmhtml_set_hilight_on_enter(GTK_XMHTML(get_widget(self)),
 				    RTEST(flag));
     return self;
 }
@@ -134,7 +136,7 @@ static VALUE
 xmhtml_set_anchor_underline_type(self, underline_type)
     VALUE self, underline_type;
 {
-    gtk_xmhtml_set_anchor_underline_type(GTK_XMHTML(get_widget(obj)),
+    gtk_xmhtml_set_anchor_underline_type(GTK_XMHTML(get_widget(self)),
 					 NUM2INT(underline_type));
     return self;
 }
@@ -143,7 +145,7 @@ static VALUE
 xmhtml_set_anchor_visited_underline_type(self, underline_type)
     VALUE self, underline_type;
 {
-    gtk_xmhtml_set_anchor_visited_underline_type(GTK_XMHTML(get_widget(obj)),
+    gtk_xmhtml_set_anchor_visited_underline_type(GTK_XMHTML(get_widget(self)),
 						 NUM2INT(underline_type));
     return self;
 }
@@ -152,7 +154,7 @@ static VALUE
 xmhtml_set_anchor_target_underline_type(self, underline_type)
     VALUE self, underline_type;
 {
-    gtk_xmhtml_set_anchor_target_underline_type(GTK_XMHTML(get_widget(obj)),
+    gtk_xmhtml_set_anchor_target_underline_type(GTK_XMHTML(get_widget(self)),
 						NUM2INT(underline_type));
     return self;
 }
@@ -161,7 +163,7 @@ static VALUE
 xmhtml_set_allow_color_switching(self, flag)
     VALUE self, flag;
 {
-    gtk_xmhtml_set_allow_color_switching(GTK_XMHTML(get_widget(obj)),
+    gtk_xmhtml_set_allow_color_switching(GTK_XMHTML(get_widget(self)),
 					 RTEST(flag));
     return self;
 }
@@ -171,7 +173,7 @@ static VALUE
 xmhtml_set_dithering(self, flag)
     VALUE self, flag;
 {
-    gtk_xmhtml_set_dithering(GTK_XMHTML(get_widget(obj)),
+    gtk_xmhtml_set_dithering(GTK_XMHTML(get_widget(self)),
 			     /* XmHTMLDitherType flag */);
     return self;
 }
@@ -181,7 +183,7 @@ static VALUE
 xmhtml_set_allow_font_switching(self, flag)
     VALUE self, flag;
 {
-    gtk_xmhtml_set_allow_font_switching(GTK_XMHTML(get_widget(obj)),
+    gtk_xmhtml_set_allow_font_switching(GTK_XMHTML(get_widget(self)),
 					RTEST(flag));
     return self;
 }
@@ -190,7 +192,7 @@ static VALUE
 xmhtml_set_max_image_colors(self, max_colors)
     VALUE self, max_colors;
 {
-    gtk_xmhtml_set_max_image_colors(GTK_XMHTML(get_widget(obj)),
+    gtk_xmhtml_set_max_image_colors(GTK_XMHTML(get_widget(self)),
 				    NUM2INT(max_colors));
     return self;
 }
@@ -199,7 +201,7 @@ static VALUE
 xmhtml_set_allow_images(self, flag)
     VALUE self, flag;
 {
-    gtk_xmhtml_set_allow_images(GTK_XMHTML(get_widget(obj)),
+    gtk_xmhtml_set_allow_images(GTK_XMHTML(get_widget(self)),
 				RTEST(flag));
     return self;
 }
@@ -208,7 +210,7 @@ static VALUE
 xmhtml_set_plc_intervals(self, min_delay, max_delay, def_delay)
     VALUE self, min_delay, max_delay, def_delay;
 {
-    gtk_xmhtml_set_plc_intervals(GTK_XMHTML(get_widget(obj)),
+    gtk_xmhtml_set_plc_intervals(GTK_XMHTML(get_widget(self)),
 				 NUM2INT(min_delay),
 				 NUM2INT(max_delay),
 				 NUM2INT(def_delay));
@@ -219,7 +221,7 @@ static VALUE
 xmhtml_set_def_body_image_url(self, url)
     VALUE self, url;
 {
-    gtk_xmhtml_set_def_body_image_url(GTK_XMHTML(get_widget(obj)),
+    gtk_xmhtml_set_def_body_image_url(GTK_XMHTML(get_widget(self)),
 				      STR2CSTR(url));
     return self;
 }
@@ -228,7 +230,7 @@ static VALUE
 xmhtml_set_anchor_buttons(self, flag)
     VALUE self, flag;
 {
-    gtk_xmhtml_set_anchor_buttons(GTK_XMHTML(get_widget(obj)),
+    gtk_xmhtml_set_anchor_buttons(GTK_XMHTML(get_widget(self)),
 				  RTEST(flag));
     return self;
 }
@@ -238,13 +240,14 @@ static VALUE
 xmhtml_set_anchor_cursor(self, cursor, flag)
     VALUE self, cursor, flag;
 {
-    gtk_xmhtml_set_anchor_cursor(GTK_XMHTML(get_widget(obj)),
+    gtk_xmhtml_set_anchor_cursor(GTK_XMHTML(get_widget(self)),
 				 /* get_gdkcursor(cursor) */,
 				 RTEST(flag));
     return self;
 }
 #endif
 
+#if 0
 void gtk_xmhtml_set_topline                       (GtkXmHTML *html,
 						   int line);
 
@@ -257,13 +260,14 @@ char *gtk_xmhtml_get_source                       (GtkXmHTML *html);
 
 void gtk_xmhtml_set_screen_gamma                  (GtkXmHTML *html,
 						   float     gamma);
+#endif
 
 #if 0
 static VALUE
 xmhtml_set_image_procs(self, image_proc, gif_proc, get_data, end_data)
     VALUE self, image_proc, gif_proc, get_data, end_data;
 {
-    gtk_xmhtml_set_image_procs(GTK_XMHTML(get_widget(obj)),
+    gtk_xmhtml_set_image_procs(GTK_XMHTML(get_widget(self)),
 			       /* XmImageProc image_proc */,
 			       /* XmImageGifProc gif_proc */,
 			       /* XmHTMLGetDataProc get_data */,
@@ -275,12 +279,13 @@ static VALUE
 xmhtml_set_event_proc(self, event_proc)
     VALUE self, event_proc;
 {
-    gtk_xmhtml_set_event_proc(GTK_XMHTML(get_widget(obj)),
+    gtk_xmhtml_set_event_proc(GTK_XMHTML(get_widget(self)),
 			      /* XmHTMLEventProc event_proc*/ );
     return self;
 }
 #endif /* 0 */
 
+#if 0
 void gtk_xmhtml_set_perfect_colors                (GtkXmHTML *html, int flag);
 void gtk_xmhtml_set_uncompress_command            (GtkXmHTML *html, char *cmd);
 void gtk_xmhtml_set_strict_checking               (GtkXmHTML *html, int flag);
@@ -290,11 +295,12 @@ void gtk_xmhtml_set_imagemap_draw                 (GtkXmHTML *html, int flag);
 void gtk_xmhtml_set_mime_type                     (GtkXmHTML *html, char *mime_type);
 void gtk_xmhtml_set_alpha_processing              (GtkXmHTML *html, int flag);
 void gtk_xmhtml_set_rgb_conv_mode                 (GtkXmHTML *html, int val);
+#endif
 
 void
 Init_gtk_xmhtml()
 {
-    gXmHTML = rb_define_class_under(mGtk, "XmHTML", gContiner);
+    gXmHTML = rb_define_class_under(mGtk, "XmHTML", gContainer);
 
     /* Instance methods */
 
